# Tasks

./: .gitignore  CMakeLists.txt  README.md
IOData/: task1_input.txt  task1_output.txt  task2_input.txt  task2_output.txt  task3_input.txt  task3_output.txt
Task1/: BigInteger.h  CMakeLists.txt  Calculator.cpp  Calculator.h  ParserInput.cpp  ParserInput.h  README.md  defines.h  main.cpp
Task2/: CMakeLists.txt  Calculator.cpp  Calculator.h  ParserInput.cpp  README.md  defines.h  main.cpp
Task3/: CMakeLists.txt  Calculator.cpp  Calculator.h  ParserInput.cpp  README.md  defines.h  main.cpp
Task3/Treasure/: Map.cpp  Map.h  Piece.cpp  Piece.h  PiecesStorage.cpp  PiecesStorage.h
Utils/: string_extention.h
